测试各个区域垃圾回收